<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.labfiveapp.ItemModifyFragment">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="11"
        android:inputType="text"
        android:hint="@string/itemview_hint_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_margin_top"
        android:layout_marginStart="@dimen/label_margin_start"
        android:text="@string/itemview_label_name"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="11"
        android:inputType="text"
        android:hint="@string/itemview_hint_title"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textViewTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_margin_top"
        android:layout_marginStart="@dimen/label_margin_start"
        android:text="@string/itemview_label_title"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
        app:layout_constraintStart_toStartOf="@+id/editTextTitle" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/itemview_label_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_margin_start"
        android:text="@string/itemview_label_image"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemview_label_radio_1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemview_label_radio_2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemview_label_radio_3" />

    </RadioGroup>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="@+id/editTextTitle"
        app:layout_constraintStart_toStartOf="@+id/editTextTitle"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textViewRatingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_margin_top"
        android:layout_marginStart="@dimen/label_margin_start"
        android:text="@string/itemview_label_rating"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintStart_toStartOf="@+id/ratingBar" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/itemedit_button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="@+id/ratingBar" />

</androidx.constraintlayout.widget.ConstraintLayout>