<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.labfiveapp.HomeEditorFragment">

    <EditText
        android:id="@+id/editTextGreetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="11"
        android:inputType="text"
        android:hint="@string/home_hint_greetings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewGreetingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:layout_marginStart="4dp"
        android:text="@string/home_label_greetings"
        app:layout_constraintTop_toBottomOf="@+id/editTextGreetings"
        app:layout_constraintStart_toStartOf="@+id/editTextGreetings" />

    <EditText
        android:id="@+id/editTextAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="11"
        android:inputType="text"
        android:hint="@string/home_hint_author"
        app:layout_constraintTop_toBottomOf="@+id/editTextGreetings"
        app:layout_constraintStart_toStartOf="@+id/editTextGreetings"
        app:layout_constraintEnd_toEndOf="@+id/editTextGreetings" />

    <TextView
        android:id="@+id/textViewAuthorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:layout_marginStart="4dp"
        android:text="@string/home_label_author"
        app:layout_constraintTop_toBottomOf="@+id/editTextAuthor"
        app:layout_constraintStart_toStartOf="@+id/editTextAuthor" />
</androidx.constraintlayout.widget.ConstraintLayout>