<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.labfiveapp.HomeFragment"
        android:label="@string/fragment_label_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/swipeFragment"
        android:name="com.example.labfiveapp.SwipeFragment"
        android:label="@string/fragment_label_swipe"
        tools:layout="@layout/fragment_swipe" />
    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.labfiveapp.ListFragment"
        android:label="@string/fragment_label_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_itemViewFragment"
            app:destination="@id/itemViewFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:launchSingleTop="true"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popUpTo="@id/listFragment" />
        <action
            android:id="@+id/action_listFragment_to_itemModifyFragment"
            app:destination="@id/itemModifyFragment"
            app:popUpTo="@id/listFragment"
            app:launchSingleTop="true" />
    </fragment>
    <action
        android:id="@+id/action_global_to_homeFragment"
        app:destination="@id/homeFragment"
        app:popUpTo="@id/homeFragment"
        app:launchSingleTop="true" />
    <action
        android:id="@+id/action_global_to_swipeFragment"
        app:destination="@id/swipeFragment"
        app:popUpTo="@id/homeFragment"
        app:launchSingleTop="true" />
    <action
        android:id="@+id/action_global_to_listFragment"
        app:destination="@id/listFragment"
        app:popUpTo="@id/homeFragment"
        app:launchSingleTop="true" />
    <fragment
        android:id="@+id/itemViewFragment"
        android:name="com.example.labfiveapp.ItemViewFragment"
        android:label="@string/fragment_label_item_view"
        tools:layout="@layout/fragment_item_view">
        <action
            android:id="@+id/action_itemViewFragment_to_itemModifyFragment"
            app:destination="@id/itemModifyFragment"
            app:popUpTo="@id/itemViewFragment"
            app:launchSingleTop="true" />
        <argument
            android:name="item_id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/itemModifyFragment"
        android:name="com.example.labfiveapp.ItemModifyFragment"
        android:label="@string/fragment_label_item_modify"
        tools:layout="@layout/fragment_item_modify" >
        <argument
            android:name="item_id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/listLiveFragment"
        android:name="com.example.labfiveapp.ListLiveFragment"
        android:label="@string/fragment_label_list"
        tools:layout="@layout/fragment_list_live" >
        <action
            android:id="@+id/action_listLiveFragment_to_itemViewFragment"
            app:destination="@id/itemViewFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:launchSingleTop="true"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popUpTo="@id/listFragment" />
        <action
            android:id="@+id/action_listLiveFragment_to_itemModifyFragment"
            app:destination="@id/itemModifyFragment"
            app:popUpTo="@id/listFragment"
            app:launchSingleTop="true" />
    </fragment>
    <action
        android:id="@+id/action_global_to_listLiveFragment"
        app:destination="@id/listLiveFragment"
        app:popUpTo="@id/homeFragment"
        app:launchSingleTop="true" />
</navigation>